style.css
html, body {
    height: 100%;
    margin: 0;
}

/* DIV 1 */
.div1 {
    display: grid;
        grid: auto-flow min-content /1fr;
        grid-template-areas: "section1"
            "section2"
            "section3";
        margin: 1em;
}


@media screen and (min-width: 650px) {
    .div1 {
        grid: auto-flow min-content / 1fr 1fr;
        grid-template-areas: "section1 section2"
                            "section1 section3";
          
    }

        .div1-img-button {
            display: flex;
            flex-direction: row;
            justify-content: center;
        }

        .section1-img {
            height: 400px;
            margin: 20px;
            display: flex;
            align-self: flex-end;
            margin: 100px 10px 10px 50px;
        }
}
/* SECTION 1*/
.section1 {
    background-color: #C7DDEA;
    grid-area: section1;
    display: flex;
    flex-direction: column;
    
}

.section1-h1 {
    font-family: Frank Ruhl Libre;
    font-size: 60px;
    margin: 50px 50px 10px 50px;
    line-height: 0.9;
}

.section1-p1 {
    font-family: Fira Sans;
    margin: 10px 50px 10px 50px;

}

.section1-span {
    color:white;
}



.section1-button {
    background-color: white;
    border-radius: 22px;
    font-family: Fira Sans;
    font-size: 15px;
    padding: 10px 30px;
    font-style: bold;
    display: flex;
    align-self: flex-start;
    margin: 50px 50px 10px 50px;
    display: flex;
    align-self: center;
    width: fit-content;
}
    

.section1-img {
    height: 300px;
    margin: 20px;
    margin: 80px 10px 10px 50px;
}

/* SECTION2 */

.section2 {
    display: flex;
    flex-direction: column;
    grid-area: section2;
    background-color: #F17949;
    justify-content: center;
    align-items: center;
}

.section2-p {
    font-family: Fira Sans;
    margin-bottom: 0;
}

.section2-h2 {
    font-family: Frank Ruhl Libre;
    color: white;
    font-size: 30px;
    margin-top: 10px;
}

/* SECTION3 */

.section3 {
    grid-area: section3;
    background-color: #FAB131;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.section3-p {
    font-family: Fira Sans;
    margin-bottom: 0;
}

.section3-h2 {
    font-family: Frank Ruhl Libre;
    color: white;
    font-size: 30px;
    margin-top: 10px;
}

/* NAV_MENU*/

.nav-menu {
    display: flex;
    justify-content: space-around;
    text-decoration: none;
    color: #A9A19E;
    font-family: Fira Sans;
    padding: 10px 0px 15px 0px;
}

.nav-link {
    text-decoration: none;
    color: #A9A19E;
}
.nav-link:hover {
    color: black;
}

/* Section 4, WITH CARDS */
.section4-div1 {
    background-color: #A9A19E;
    padding-bottom: 150px;
    display: flex;
    flex-direction: column;
}

.section4-about {
    background-color: #FAB131;
}

.section4-h2 {
    font-family: Frank Ruhl Libre;
    color: white;
    font-size: 50px;
    padding: 30px 30px 0px 30px;
    text-align: center;

   
}



#button-to-hide {
    display: none;
}

.section4-p {
    font-family: Fira Sans;
    padding: 0px 30px 20px 30px;
    text-align: center;
    
}

/* CARD */
.card-container {
    display: flex;
    flex-direction: column;
    background-color: #A9A19E;
    
}

.card {
    background-color: white;
    margin: 10px 50px 10px 50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    border-radius: 10px;
   
}

.card-img-div {
    height: 150px;
    margin-left: 15px;
    margin-right: 15px;
    display: flex;
    justify-content: center;
    margin-top: -50px;
    border-radius: 5px;
    overflow: hidden;
}

.child {
    background-color: #C7DDEA;
}

.middle {
    background-color: #FAB131;
}

.old {
    background-color: #F17949;

}
.card-img-child { 
    max-width: 50%;
        margin-bottom: -12%;
        margin-top: 50px;
}

.card-img-middle {
    max-width: 50%;
    margin-bottom: -85%;
    margin-top: 50px;
}

.card-img-old {
    max-width: 50%;
    margin-bottom: -70%;
    margin-top: 50px;
}

.card-h3 {
    text-align: center;
    font-family: Frank Ruhl Libre;
    font-size: 1.2em;
}

.card-p {
    text-align: center;
    font-family: Fira Sans;
    margin-right: 30px;
    margin-left: 30px;
}

/* media query card section */
@media screen and (min-width: 650px) {
    .section4-div1 {
        background-color: #A9A19E;
        padding-bottom: 150px;
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        align-items: last baseline;
    }

        .section4-button-div {
            display: flex;
            flex-direction: column;
            justify-content: center;
            width: 40%;
        }

    .section4-p {
        max-width: 40%;
    }

    #button-to-hide {
        display: block;
    }

    .card-container {
        display: flex;
        flex-direction: row;
        background-color: #A9A19E;
        justify-content: space-around;
        padding: 0px 30px 0px 30px;
        margin-bottom: -15%;
    }

    .card {
        background-color: white;
        margin: 10px 20px 10px 20px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-content: center;
        border-radius: 10px;
    }

    .section4-about {
        padding-top: 150px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }



/* SECTION 5 */

.section5 {
    display: grid;
        grid: auto-flow 200px /1fr;
        grid-template-areas: "section5-1"
                            "section5-2"
                            "section5-3"
                            "section5-4"
                            "section5-5"
                            "section5-6";
       
        
}
.section5-1 {
    background-color: #C7DDEA;
    text-align: center;
    grid-area: section5-1;
    display: flex;
    justify-content: center;
    align-items: center;

}
.section5-1-h2 {
    font-size: 3em;
}

.section5-2 {
    font-family: Fira Sans;
    grid-area: section5-2;
}

.section5-3 {
    background-color: #d7d3d2;
    font-family: Fira Sans;
    grid-area: section5-3;
}

.section5-4 {
    font-family: Fira Sans;
    grid-area: section5-4;
}

.section5-5 {
    background-color: #F17949;
    font-family: Fira Sans;
    grid-area: section5-5;
}

.section5-6 {
    font-family: Fira Sans;
    grid-area: section5-6;
}

.number {
    font-size: 2em;
    font-family: Frank Ruhl Libre;
    font-style: bold;
    padding-left: 20px;
}

.text {
    text-align: center;
    font-size: 1.5em;   
    display: flex;
    justify-content: center;
    margin-top: 50px;
    
}


@media screen and (min-width: 650px) {
    .section5 {
        grid: auto-flow 300px / 1fr 1fr 1fr;
        grid-template-areas: 
        "section5-1 section5-2 section5-3"
        "section5-4 section5-5 section5-6";

    }
}

.nav-up {
    text-align: center;
    padding: 20px 0px 20px 0px;
    background-color: #A9A19E;
    font-family: Fira Sans;
    display: flex;
    flex-direction: column;
}

.nav-up-a {
    text-decoration: none;
    color: black;
}



/* colors:  #F17949; orange, #FAB131 yellow, #C7DDEA baby blue, #A9A19E grey */




}

